[gd_scene load_steps=10 format=3 uid="uid://b3xun5rowowog"]

[ext_resource type="Shader" path="res://scenes/menu/pause_menu.gdshader" id="1_mtjxx"]
[ext_resource type="Script" path="res://scenes/menu/options_MOBILE_pause.gd" id="2_v0ur5"]
[ext_resource type="FontFile" uid="uid://cjtxrc0chsxxg" path="res://fonte/Poppins-Regular.ttf" id="3_qlk45"]
[ext_resource type="Texture2D" uid="uid://ccpdcum0eeytj" path="res://assets/grabber.png" id="3_x8a0w"]
[ext_resource type="Texture2D" uid="uid://cklng2hps6a0e" path="res://assets/grabbe_highlightr.png" id="4_g2yvo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_346hv"]
shader = ExtResource("1_mtjxx")
shader_parameter/amount = 2.0

[sub_resource type="ImageTexture" id="ImageTexture_nxk02"]

[sub_resource type="ImageTexture" id="ImageTexture_wx4sx"]

[sub_resource type="ImageTexture" id="ImageTexture_jwq5u"]

[node name="MenuPauseMobile" type="CanvasLayer"]
layer = 10

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_346hv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_v0ur5")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 620.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TituloControles" type="Label" parent="Control/PanelContainer/MarginContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 16
text = "Configurações"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="action_list_configs" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2
theme_override_constants/margin_left = 6

[node name="Control2" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2
alignment = 1

[node name="Vsync" type="CheckButton" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "Sincronização Vertical"

[node name="Control" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2
alignment = 1

[node name="ModeCanhoto" type="CheckButton" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer3"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
text = "Modo Canhoto"

[node name="Control3" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBox_Brilho" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2
alignment = 1

[node name="title_brilho" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Brilho"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
text = "Brilho"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Brilho"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
mouse_filter = 1

[node name="slider_brilho" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Brilho"]
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_x8a0w")
theme_override_icons/grabber_highlight = ExtResource("4_g2yvo")
theme_override_icons/tick = SubResource("ImageTexture_nxk02")

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="title_vol" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox_Master" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol_master" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
text = "Geral"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
mouse_filter = 1

[node name="vol_master" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master"]
texture_filter = 1
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_x8a0w")
theme_override_icons/grabber_highlight = ExtResource("4_g2yvo")
theme_override_icons/tick = SubResource("ImageTexture_wx4sx")
tick_count = 10
ticks_on_borders = true

[node name="hBox_Music" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol_music" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
text = "Musica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 1

[node name="vol_music" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music"]
texture_filter = 1
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_x8a0w")
theme_override_icons/grabber_highlight = ExtResource("4_g2yvo")
theme_override_icons/tick = SubResource("ImageTexture_jwq5u")
tick_count = 10
ticks_on_borders = true

[node name="HBox_sfx" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs"]
layout_mode = 2

[node name="title_vol_sfx" type="Label" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx"]
texture_filter = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 12
text = "Efeitos "
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer" type="Control" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 1

[node name="vol_sfx" type="HSlider" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx"]
texture_filter = 1
custom_minimum_size = Vector2(247, 0)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_x8a0w")
theme_override_icons/grabber_highlight = ExtResource("4_g2yvo")
theme_override_icons/tick = SubResource("ImageTexture_jwq5u")
tick_count = 10
ticks_on_borders = true

[node name="ResetButton" type="Button" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
texture_filter = 2
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 16
text = "Reset to default"

[node name="VSeparator" type="VSeparator" parent="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_qlk45")
theme_override_font_sizes/font_size = 16
text = "Voltar"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer2/Vsync" to="Control" method="_on_vsync_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBoxContainer3/ModeCanhoto" to="Control" method="_on_mode_canhoto_pressed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Brilho/slider_brilho" to="Control" method="_on_slider_brilho_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_Master/vol_master" to="Control" method="_on_vol_master_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/hBox_Music/vol_music" to="Control" method="_on_vol_music_value_changed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ScrollContainer/action_list_configs/HBox_sfx/vol_sfx" to="Control" method="_on_vol_sfx_value_changed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/MarginContainer2/HBoxContainer/VBoxContainer2/ResetButton" to="Control" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Button" to="Control" method="_on_button_pressed"]
